# promptops

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: summarise_tests.yaml  summarise_v1.yaml
src/promptops/: cli.py  engine.py  models.py  scorer.py  store.py
tests/: test_cli.py  test_diff_cmd.py  test_engine.py  test_models.py  test_scorer.py  test_validate_cmd.py
