[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptops"
version = "0.1.0"
description = "Local-first prompt eval toolkit for LLM developers"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12,<1",
    "rich>=13,<14",
    "pydantic>=2.7,<3",
    "anthropic>=0.28,<1",
    "openai>=1.30,<2",
    "jinja2>=3.1,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
promptops = "promptops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
